cmake_minimum_required (VERSION 3.0)
project(test)
if(TEST1)
    add_definitions(-DTEST)
    add_definitions(-DSIPHASH_TEST)
endif()
include_directories(include src)
add_executable(test src/psmallocv2.cpp src/mt19937-64.c src/redisassert.c src/dict.c src/test.cpp)
# add_executable(main src/psmalloc.cpp src/main.cpp)
